<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp4"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/text_billing_prev_on_peak"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/semi_colon"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tod_previous_on_peak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_billing_tod_on_peak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_billing_tod_on_peak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/et_enter_on_peak"
            android:inputType="numberDecimal"
            android:textStyle="bold"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp4"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/text_billing_prev_nor_peak"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/semi_colon"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tod_previous_normal_peak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_billing_tod_normal_peak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_billing_tod_normal_peak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/et_enter_normal_peak"
            android:inputType="numberDecimal"
            android:textStyle="bold"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp4"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/text_billing_prev_off_peak"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/semi_colon"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tod_previous_off_peak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textStyle="bold"
            tools:ignore="TooManyViews" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_billing_tod_off_peak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_billing_tod_off_peak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/et_enter_off_peak"
            android:inputType="numberDecimal"
            android:textStyle="bold"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>